chmod: 3 filters added
