# routes/expense-routes.go
@@ -9,6 +9,9 @@ import (
 var RegisterExpenseRoutes = func(router *mux.Router) {
 	router.HandleFunc("/expenses", controller.CreateExpense).Methods("POST")
 	router.HandleFunc("/expenses", controller.GetExpense).Methods("GET")
+	router.HandleFunc("/expenses/week", controller.FilterExpenseByWeek).Methods("GET")
+	router.HandleFunc("/expenses/month", controller.FilterExpenseByMonth).Methods("GET")
+	router.HandleFunc("/expenses/past-three-month", controller.FilterExpenseByPastThreeMonth).Methods("GET")
 	router.HandleFunc("/expenses/{id}", controller.GetExpenseById).Methods("GET")
 	router.HandleFunc("/expenses/{id}", controller.UpdateExpense).Methods("PATCH")
 	router.HandleFunc("/expenses/{id}", controller.DeleteExpenseById).Methods("DELETE")
